# script-template

./: Main.hs  foo.cabal
test/: Doctest.hs  Spec.hs
