Name:    foo
Version: 0.1.0.0

Synopsis:    <Describe foo>
Description: <Describe foo>

Homepage:           https://github.com/jwiegley/foo
License:            BSD3
License-file:       LICENSE
Author:             John Wiegley
Maintainer:         John Wiegley <johnw@newartisans.com>
Category:           Utils
Build-type:         Simple
Cabal-version:      >= 1.10

Extra-Source-Files: README.md

Source-repository head
  type:     git
  location: https://github.com/jwiegley/foo

Test-suite doctest
    Default-language: Haskell98
    Type:             exitcode-stdio-1.0
    Main-is:          Doctest.hs
    Ghc-options:      -main-is Doctest
    Hs-source-dirs:   test
    Build-depends:    base == 4.*
                    , directory >= 1.0 && < 1.3
                    , doctest   >= 0.8 && <= 0.10
                    , filepath  >= 1.3 && < 1.4

test-suite hspec
    Default-language: Haskell98
    Type:             exitcode-stdio-1.0
    Main-is:          Spec.hs
    Hs-source-dirs:   test
    Ghc-options:      -threaded -Wall -Werror
    Build-depends:    base
                    , hspec >= 1.4
                    , hspec-expectations >= 0.3
                    , QuickCheck >= 2.5
                    , HUnit >= 1.2.5

Executable foo
    Main-is:          Main.hs
    Ghc-options:      -threaded
    Default-language: Haskell98

    Build-depends:    base                 >= 4 && < 5
                    , bytestring           >= 0.9.2.1
                    , containers           >= 0.4.2
                    , deepseq              >= 1.3
                    , hslogger             >= 1.2
                    , io-storage           >= 0.3
                    , lens                 >= 3.7
                    , old-locale           >= 1.0.0.4
                    , optparse-applicative >= 0.5.2.1
                    , parallel-io          >= 0.3.2
                    , pointless-fun        >= 1.1
                    , regex-posix          >= 0.95
                    , shake                >= 0.6
                    , shelly               >= 0.15
                    , stringable           >= 0.1
                    , system-fileio        >= 0.3.9
                    , system-filepath      >= 0.4.7
                    , text                 >= 0.11.2
                    , text                 >= 0.11.2
                    , text-format          >= 0.3
                    , time                 >= 1.4
                    , unix                 >= 2.5.1
                    , unordered-containers >= 0.2.3
