Name:                 foo
Version:              0.1.0
                      
Synopsis:             <Describe foo>
Description:          <Describe foo>
                      
Homepage:             https://github.com/jwiegley/foo
License:              BSD3
License-file:         LICENSE
Author:               John Wiegley
Maintainer:           John Wiegley <johnw@newartisans.com>
Category:             Utils
Build-type:           Simple
Cabal-version:        >= 1.10
                      
Extra-Source-Files:   README.md
                      
Source-repository head
    Type:             git
    Location:         git://github.com/jwiegley/foo.git

Test-suite doctest
    Type:             exitcode-stdio-1.0
    Main-is:          Doctest.hs
    Ghc-options:      -main-is Doctest
    Hs-source-dirs:   test
    Build-depends:    base
                    , directory
                    , doctest
                    , doctest-prop
                    , filepath

test-suite hspec
    Type:             exitcode-stdio-1.0
    Main-is:          Spec.hs
    Hs-source-dirs:   test
    Ghc-options:      -threaded -Wall -Werror
    Build-depends:    base
                    , hspec
                    , hspec-expectations
                    , QuickCheck
                    , HUnit

Executable foo
    Main-is:          Main.hs
    Ghc-options:      -threaded -Wall

    Default-language: Haskell2010
    Default-extensions: BangPatterns
                      ConstraintKinds
                      DeriveDataTypeable
                      DeriveGeneric
                      EmptyDataDecls
                      FlexibleContexts
                      FlexibleInstances
                      GADTs
                      GeneralizedNewtypeDeriving
                      MultiParamTypeClasses
                      NoImplicitPrelude
                      NoMonomorphismRestriction
                      OverloadedStrings
                      PatternGuards
                      RankNTypes
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TypeFamilies
                      ViewPatterns

    Build-depends:    base
                    , bytestring
                    , classy-prelude
                    , containers
                    , deepseq
                    , hslogger
                    , io-storage
                    , lens
                    , old-locale
                    , optparse-applicative
                    , parallel-io
                    , pointless-fun
                    , regex-posix
                    , shake
                    , system-fileio
                    , system-filepath
                    , text
                    , text-format
                    , time
                    , unix
                    , unordered-containers
